[package]
name = "kokekokkod"
version = "0.1.0"
authors = ["ikubaku <hide4d51@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
elefren = { version = "0.22", features = ["toml"] }
isolang = "1.0"
